--- a/src/index.html
+++ b/src/index.html
@@ -1,6 +1,11 @@
+
 <!doctype html>
+
 <html lang="en">
+
+
 <head>
+
   <meta charset="utf-8">
   <title>Test3</title>
   <base href="/">
@@ -9,8 +14,20 @@
   <link rel="preconnect" href="https://fonts.gstatic.com">
   <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@300;400;500&display=swap" rel="stylesheet">
   <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
+
 </head>
 <body>
+
   <app-root></app-root>
+
 </body>
 </html>
+
+<!--//Lazy Loading
+const routes: Routes = [
+  {path: 'items',
+    loadChildren: () => import('./items/items.module').then(m => m.ItemsModule) 
+  } 
+];-->
+        
+
